--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon_app"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -26,6 +26,7 @@
         <activity android:name=".Profile_Activity"/>
         <activity android:name=".Matched_Activity"/>
         <activity android:name=".edit_profile"/>
+        <activity android:name=".Check_info"/>
     </application>
 
 </manifest>
