displaying logo at application start

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Matches" >
 
-    <activity android:name="com.example.matches.Login_Activity">
+    <activity android:name="com.example.matches.SplashActivity"
+        android:theme="@style/SplashTheme">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
     </activity>
+        <activity android:name=".Login_Activity" />
         <activity android:name=".MainActivity"/>
         <activity android:name=".Registration_Activity"/>
         <activity android:name=".Profile_Activity"/>
