--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
 }
 
 dependencies {
@@ -49,11 +50,15 @@ dependencies {
     implementation 'com.lorentzos.swipecards:library:1.0.9'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
+
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.chabbal:slidingdotsplash:1.0.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 
+    implementation 'com.stringee.sdk.android:stringee-android-sdk:1.7.0'
+    implementation 'com.android.volley:volley:1.2.0'
+
+    implementation 'pub.devrel:easypermissions:0.4.0'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
