--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+
+        maven { url "https://tokbox.bintray.com/maven" }
         maven { url "https://jitpack.io" }
     }
 }
