--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'com.onesignal.androidsdk.onesignal-gradle-plugin'
     id 'com.android.application'
 }
 
@@ -55,11 +56,15 @@ dependencies {
     implementation 'com.chabbal:slidingdotsplash:1.0.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 
-    implementation 'com.stringee.sdk.android:stringee-android-sdk:1.7.0'
+
     implementation 'com.android.volley:volley:1.2.0'
 
     implementation 'pub.devrel:easypermissions:0.4.0'
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
+    implementation 'com.onesignal:OneSignal:4.4.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
