--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,14 @@
 buildscript {
     repositories {
         google()
+        mavenCentral()
+        gradlePluginPortal()
         jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath 'com.google.gms:google-services:4.3.8'
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:0.12.10'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -15,6 +18,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
         jcenter()
 
         maven { url "https://tokbox.bintray.com/maven" }
